# vaxbr

./: .gitignore  README.md  divisao_tarefas.txt  main.py  optinals.txt  pyproject.toml  references.txt  script.txt  vax.csv
app/: __init__.py  main.py  test_deltalake.py
app/core/: logger.py
app/db/: __init__.py  utils.py
app/repositories/: vax_repo.py
app/routers/: hash_router.py  vax_router.py
app/schemas/: vax.py
app/tools/: __init__.py  csv_loader.py  faker_utils.py
tests/: crud.py
