[project]
name = "vaxbr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake>=1.5.0",
    "faker>=40.11.1",
    "fastapi[standard]>=0.135.2",
    "logging>=0.4.9.6",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "zipstream>=1.1.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["*.py"]   # reconhece qualquer .py como teste

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
